Generalises the instruction, allow other UNIX-like OS than Ubuntu
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1171 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/install/install.tex
+++ b/labs/install/install.tex
@@ -38,8 +38,8 @@
 \label{sec:Introduktion}
 I denna laboration ska du installera program som du behöver för kursen och 
 eventuellt för kommande kurser på din dator.
-Du ska även installera ett operativsystem, Ubuntu, som kommer att användas 
-under kursens gång.
+Du ska även installera ett operativsystem, Ubuntu eller annat UNIX-likt system, 
+som kommer att användas under kursens gång.
 
 De programvaror du kommer att installera är följande:
 \begin{itemize}
@@ -66,6 +66,10 @@ Syftet med laborationen är:
 \label{sec:Genomforande}
 Här följer genomförandet för laborationen.
 Det rekommenderas att du läser igenom hela genomförandet innan du sätter igång.
+
+Hela instruktionen är skriven för Ubuntu, men det är valfritt vilket UNIX-likt 
+operativsystem som används.
+Exempel på andra UNIK-lika system är Debian och OpenBSD.
 
 \subsection{Ubuntu Desktop}
 \noindent
