Uses terminal lab instead of linux lab, minor imports to terminal from linux
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1172 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/terminal/literature.tex
+++ b/labs/terminal/literature.tex
@@ -67,3 +67,40 @@ För dokumentation om kommandona i Windows kan följande sida användas:
 \begin{quote}
 	\url{http://technet.microsoft.com/en-us/library/bb490890.aspx}
 \end{quote}
+
+\subsection{Grundläggande UNIX-kommandon}
+Här återges några av de mest grundläggande UNIX-kommandona.
+Läs respektive manualsida och bekanta dig med kommandot, uppgifterna i denna 
+laboration är utformade för att stödja dig i denna process.
+
+Följande kommandon används för filhantering:
+\begin{itemize}
+  \item \texttt{ls(1)}
+  \item \texttt{cd}
+  \item \texttt{pwd(1)}
+  \item \texttt{mkdir(1)}
+  \item \texttt{rmdir(1)}
+  \item \texttt{cp(1)}
+  \item \texttt{mv(1)}
+  \item \texttt{rm(1)}
+  \item \texttt{find(1)}
+  \item \texttt{which(1)}
+  \item \texttt{touch(1)}
+  \item \texttt{stat(1)}
+\end{itemize}
+
+Och följande kommandon används för att arbeta med filernas innehåll:
+\begin{itemize}
+  \item \texttt{cat(1)}
+  \item \texttt{more(1)}
+  \item \texttt{less(1)}
+  \item \texttt{head(1)}
+  \item \texttt{tail(1)}
+  \item \texttt{grep(1)}
+  \item \texttt{vi(1)}
+  \item \texttt{nano(1)}
+\end{itemize}
+
+För fler kommandon, see avsnittet \emph{coreutils} i GNU:s infomanual genom att 
+köra kommandoraden \texttt{info coreutils}.
+
