--- a/labs/latex/latex.tex
+++ b/labs/latex/latex.tex
@@ -20,10 +20,10 @@
 \assignmenttype{Laboration}
 \title{\LaTeX}
 \author{Daniel Bosk\footnote{%
-	Detta verk är tillgängliggjort under licensen Creative Commons 
-	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
-	För att se en sammanfattning och kopia av licenstexten besök URL 
-	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
+  Detta verk är tillgängliggjort under licensen Creative Commons 
+  Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+  För att se en sammanfattning och kopia av licenstexten besök URL 
+  \url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
 }}
 \date{\svnId}
 
@@ -48,7 +48,7 @@ började därför att skriva Metafont och \TeX.
 Det är alltså utvecklat för att skriva matematiska och tekniska texter.
 Några exempel på vad som kan åstadkommas med \TeX\ kan ses i The \TeX\ Users 
 Group (TUG) \emph{The \TeX\ showcase}\footnote{%
-	URL: \url{http://www.tug.org/texshowcase/}.
+  URL: \url{http://www.tug.org/texshowcase/}.
 }.
 
 
@@ -78,27 +78,22 @@ Skriv ett kort exempeldokument med \emph{article} som dokumentklass där du
 testar lite olika funktionalitet.
 
 Leta fram kurslitteraturen i Kungliga Bibliotekets katalog Libris\footnote{%
-	URL: \url{http://libris.kb.se}.
+  URL: \url{http://libris.kb.se}.
 } och skapa en referens för \BibTeX i en .bib-fil.
 
-Installera universitetets dokumentklasser.
-Detta gör du genom att gå in på följande URL:
-\begin{center}
-	\url{http://ver.miun.se/latex/}.
-\end{center}
-Läs igenom filen \emph{README} och installera därefter paketen 
-\emph{miunmisc.tar.gz}, \emph{miunart.tar.gz} och \emph{miunthes.tar.gz}.
-
-Skriv ett nytt exempeldokument som använder \emph{miunthes} som dokumentklass.
+Skriv ett nytt exempeldokument, fortfarande med \emph{article} som 
+dokumentklass.
 Detta exempeldokument ska
 \begin{itemize}
-	\item ha minst en figur,
-	\item ha minst en tabell med tabellhuvud, några rader och kolumner,
-	\item ha minst en referens med hjälp av .bib-filen som skapades tidigare,
-	\item ha minst en matematisk formel,
-	\item ha minst två huvudrubriker med minst en underrubrik vardera, samt
-	\item ha en innehållsförteckning och en dokumenttitel (\texttt{\textbackslash 
-		maketitle}).
+  \item ha en sammanfattning,
+  \item ha en innehållsförteckning,
+  \item ha minst en figur,
+  \item ha minst en tabell med tabellhuvud, några rader och kolumner,
+  \item ha minst en referens med hjälp av .bib-filen som skapades tidigare,
+  \item ha minst en matematisk formel,
+  \item ha minst två huvudrubriker med minst en underrubrik vardera, samt
+  \item ha en innehållsförteckning och en dokumenttitel (\texttt{\textbackslash 
+    maketitle}).
 \end{itemize}
 Dokumentet ska naturligtvis ha en korrekt dokumentstruktur.
 
@@ -106,9 +101,10 @@ Dokumentet ska naturligtvis ha en korrekt dokumentstruktur.
 \section{Examination}
 \label{sec:Examination}
 \noindent
-Ladda upp kompilerad PDF-fil med tillhörande källkod för vardera av de två 
-exempeldokumenten, med \emph{article} respektive \emph{miunthes} som 
-dokumentklass, till inlämningslådan i lärplattformen.
+Ladda upp till inlämningslådan i lärplattformen en zipfil innehållandes en 
+kompilerad PDF-fil med tillhörande källkod för det större exempeldokumentet.
+Med källkod menas dokumentet innehållandes TeX-koden och alla figurer och 
+BibTeX-filer.
 
 
 \printbibliography
