Adds reading from linux course book
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1176 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/terminal/literature.tex
+++ b/labs/terminal/literature.tex
@@ -2,6 +2,10 @@
 % Author:	Daniel Bosk <daniel.bosk@miun.se>
 För att genomföra denna laboration bör du ha läst kapitlet om operativsystem 
 \citep[kapitel 3]{Brookshear2012csa}.
+Det rekommenderas att du även läser kapitel 1, 12.1, 12.5--12.7 och 12.10 
+i \citetitle{nemeth2011ual} \cite{nemeth2011ual}.
+Denna bok ingår egentligen inte i kurslitteraturen för denna kurs, men boken 
+ingår i kommande kurser.
 
 För dokumentation om olika program i UNIX-lika system används kommandot 
 \emph{man}.
