Clarifies project instructions and imports work from natovervak project
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1175 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/literature.bib
+++ b/literature.bib
@@ -244,6 +244,7 @@
 	author={Bosk, Daniel},
 	title={En teknisk rapport : En anpassning av rapportmallen för LibreOffice 
 		till dokumentklassen för {\LaTeX}},
+  year={2012},
   URL={http://ver.miun.se/latex/miunthes/thesis/thesis.pdf},
 }
 @misc{LucksMD5,
