--- a/labs/python/python.tex
+++ b/labs/python/python.tex
@@ -12,6 +12,7 @@
 \usepackage[listings,prettyref,varioref]{miunmisc}
 
 \svnInfo $Id$
+%\printanswers
 
 \courseid{DT001G}
 \course{Informationsteknologi grundkurs}
