--- a/literature.bib
+++ b/literature.bib
@@ -289,3 +289,15 @@
   title={Gnome - Debian Wiki},
   URL={http://wiki.debian.org/Gnome},
 }
+@unpublished{pythonkramaren1,
+  title={Pythonkramaren del 1: Programmering för teknologer},
+  author={Henrik Eriksson},
+  note={Kungliga Tekniska högskolan},
+  URL={http://www.csc.kth.se/utbildning/kth/kurser/DD1344/grudat10/pythonkramaren1.pdf},
+}
+@unpublished{pythonkramaren2,
+  title={Pythonkramaren del 2: Datalogi för teknologer},
+  author={Henrik Eriksson},
+  note={Kungliga Tekniska högskolan},
+  URL={http://www.csc.kth.se/utbildning/kth/kurser/DD1344/grudat10/pythonkramaren1.pdf},
+}
