--- a/studyguide/studyguide.tex
+++ b/studyguide/studyguide.tex
@@ -42,9 +42,9 @@ Kursen ger även en introduktion till rapportskrivande och presentationer.
 Mer specifikt ska du efter genomgången kurs uppfylla följande mål:
 \begin{itemize}
   \input{install-aim.tex}
-  \input{linux-aim.tex}
-  \input{latex-aim.tex}
+  \input{term-aim.tex}
   \input{pylab-aim.tex}
+  \input{computer-aim.tex}
   \input{project-aim.tex}
 \end{itemize}
 
@@ -104,15 +104,14 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
     \midrule
     1	& Kursstart/Föreläsning introduktion \\
       & Laboration L0 Installation \\
-      & Laboration L1 Introduktion till Linuxsystem \\
     \midrule
     2 & Föreläsning om datarepresentation \\
-      & Föreläsning om datorarkitektur, del 1 \\
+      & Föreläsning om datorarkitektur \\
       & Handledning \\
     \midrule
-    3 & Föreläsning om datorarkitektur, del 2 \\
-      & Föreläsning om den UNIX-lika terminalen \\
+    3 & Föreläsning om den UNIX-lika terminalen \\
       & Övning: den UNIX-lika terminalen \\
+      & Laboration L1 Terminalen \\
       & Handledning \\
     \midrule
     4 & Föreläsning om programmering med Python, del 1 \\
@@ -124,7 +123,7 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
     \midrule
     5 & Föreläsning om LaTeX \\
       & Övning: LaTeX \\
-      & Laboration L3 LaTeX \\
+      & Laboration L3 Datorn \\
       & Föreläsning om presentationsteknik \\
       & Handledning \\
     \midrule
@@ -153,9 +152,6 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
 \subsection{Laboration L0 Installation}
 \input{install-lit.tex}
 
-\subsection{Laboration L1 Introduktion till Linuxsystem}
-\input{linux-lit.tex}
-
 \subsection{Föreläsning om datarepresentation}
 \input{datarep-lit.tex}
 
@@ -164,6 +160,9 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
 
 \subsection{Föreläsning om den UNIX-lika terminalen}
 \input{shell-lit.tex}
+
+\subsection{Laboration L1 Terminalen}
+\input{term-lit.tex}
 
 \subsection{Föreläsning om programmering med Python}
 \input{python-lit.tex}
@@ -174,8 +173,8 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
 \subsection{Föreläsning om LaTeX}
 \input{tex-lit.tex}
 
-\subsection{Laboration L3 LaTeX}
-\input{latex-lit.tex}
+\subsection{Laboration L3 Datorn}
+\input{computer-lit.tex}
 
 \subsection{Föreläsning om presentationsteknik}
 \input{present-lit.tex}
