Minor changes to make course material compile
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1203 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/studyguide/studyguide.tex
+++ b/studyguide/studyguide.tex
@@ -9,7 +9,8 @@
 \usepackage{booktabs}
 \usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
 \addbibresource{literature.bib}
-\usepackage[varioref,prettyref]{miunmisc}
+\usepackage{listings}
+\usepackage[varioref,prettyref,listings]{miunmisc}
 
 \svnInfo $Id$
 
