--- a/labs/terminal/terminal.tex
+++ b/labs/terminal/terminal.tex
@@ -5,11 +5,12 @@
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
 \usepackage{prettyref,varioref}
-\usepackage{natbib}
 \usepackage{listings}
 \usepackage{color}
 \usepackage[today,nofancy]{svninfo}
-\usepackage[natbib,varioref,prettyref,listings]{miunmisc}
+\usepackage[natbib,style=numeric-comp,maxbibnames=99]{biblatex}
+\addbibresource{literature.bib}
+\usepackage[varioref,prettyref,listings]{miunmisc}
 
 \svnInfo $Id$
 %\printanswers
@@ -267,5 +268,5 @@ Frågorna i \prettyref{sec:Genomforande} besvaras i textfältet i laborationens
 inlämningslåda i lärplattformen.
 
 
-\bibliography{literature}
+\printbibliography
 \end{document}
