Corrects subsection to subsubsection in literature section
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1205 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/terminal/literature.tex
+++ b/labs/terminal/literature.tex
@@ -72,7 +72,7 @@ För dokumentation om kommandona i Windows kan följande sida användas:
 	\url{http://technet.microsoft.com/en-us/library/bb490890.aspx}
 \end{quote}
 
-\subsection{Grundläggande UNIX-kommandon}
+\subsubsection{Grundläggande UNIX-kommandon}
 Här återges några av de mest grundläggande UNIX-kommandona.
 Läs respektive manualsida och bekanta dig med kommandot, uppgifterna i denna 
 laboration är utformade för att stödja dig i denna process.
