--- a/studyguide/studyguide.tex
+++ b/studyguide/studyguide.tex
@@ -7,7 +7,7 @@
 \usepackage{hyperref}
 \usepackage[today,nofancy]{svninfo}
 \usepackage{booktabs}
-\usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
+\usepackage[natbib,style=numeric-comp,maxbibnames=99]{biblatex}
 \addbibresource{literature.bib}
 \usepackage{listings}
 \usepackage[varioref,prettyref,listings]{miunmisc}
@@ -99,7 +99,7 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
 
 \begin{table}
 	\centering
-  \begin{tabular}{rp{9cm}}
+  \begin{tabular}{cp{9cm}}
     \toprule
 		\textbf{Kursvecka}	& \textbf{Arbete} \\
     \midrule
@@ -125,7 +125,7 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
     5 & Föreläsning om LaTeX \\
       & Övning: LaTeX \\
       & Laboration L3 Datorn \\
-      & Föreläsning om presentationsteknik \\
+      & Föreläsning om rapportskrivning och presentationsteknik \\
       & Handledning \\
     \midrule
     6 & Projekt \\
@@ -177,7 +177,7 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
 \subsection{Laboration L3 Datorn}
 \input{computer-lit.tex}
 
-\subsection{Föreläsning om presentationsteknik}
+\subsection{Föreläsning om rapportskrivning och presentationsteknik}
 \input{present-lit.tex}
 
 \subsection{Projektet}
