Moves some reading instructions to main file, not necessary in studyguide
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1208 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/terminal/terminal.tex
+++ b/labs/terminal/terminal.tex
@@ -65,6 +65,42 @@ Syftet med denna inlämningsuppgift är att
 \noindent
 \input{literature.tex}
 
+\subsection{Grundläggande UNIX-kommandon}
+Här återges några av de mest grundläggande UNIX-kommandona.
+Läs respektive manualsida och bekanta dig med kommandot, uppgifterna i denna 
+laboration är utformade för att stödja dig i denna process.
+
+Följande kommandon används för filhantering:
+\begin{itemize}
+  \item \texttt{ls(1)}
+  \item \texttt{cd}
+  \item \texttt{pwd(1)}
+  \item \texttt{mkdir(1)}
+  \item \texttt{rmdir(1)}
+  \item \texttt{cp(1)}
+  \item \texttt{mv(1)}
+  \item \texttt{rm(1)}
+  \item \texttt{find(1)}
+  \item \texttt{which(1)}
+  \item \texttt{touch(1)}
+  \item \texttt{stat(1)}
+\end{itemize}
+
+Och följande kommandon används för att arbeta med filernas innehåll:
+\begin{itemize}
+  \item \texttt{cat(1)}
+  \item \texttt{more(1)}
+  \item \texttt{less(1)}
+  \item \texttt{head(1)}
+  \item \texttt{tail(1)}
+  \item \texttt{grep(1)}
+  \item \texttt{vi(1)}
+  \item \texttt{nano(1)}
+\end{itemize}
+
+För fler kommandon, see avsnittet \emph{coreutils} i GNU:s infomanual genom att 
+köra kommandoraden \texttt{info coreutils}.
+
 
 \section{Genomförande}
 \label{sec:Genomforande}
@@ -265,7 +301,7 @@ $
 \label{sec:Examination}
 \noindent
 Frågorna i \prettyref{sec:Genomforande} besvaras i textfältet i laborationens 
-inlämningslåda i lärplattformen.
+inlämningslåda i lär\-platt\-formen.
 
 
 \printbibliography
