--- a/labs/terminal/literature.tex
+++ b/labs/terminal/literature.tex
@@ -4,8 +4,8 @@ För att genomföra denna laboration bör du ha läst kapitlet om operativsystem
 \citep[kapitel 3]{Brookshear2012csa}.
 Det rekommenderas att du även läser kapitel 1, 12.1, 12.5--12.7 och 12.10 
 i \citetitle{nemeth2011ual} \cite{nemeth2011ual}.
-Denna bok ingår egentligen inte i kurslitteraturen för denna kurs, men boken 
-ingår i kommande kurser.
+Den senare boken ingår egentligen inte i kurslitteraturen för denna kurs, men 
+då boken ingår i kommande kurser kan ni nyttja den redan nu.
 
 För dokumentation om olika program i UNIX-lika system används kommandot 
 \emph{man}.
@@ -71,40 +71,3 @@ För dokumentation om kommandona i Windows kan följande sida användas:
 \begin{quote}
 	\url{http://technet.microsoft.com/en-us/library/bb490890.aspx}
 \end{quote}
-
-\subsubsection{Grundläggande UNIX-kommandon}
-Här återges några av de mest grundläggande UNIX-kommandona.
-Läs respektive manualsida och bekanta dig med kommandot, uppgifterna i denna 
-laboration är utformade för att stödja dig i denna process.
-
-Följande kommandon används för filhantering:
-\begin{itemize}
-  \item \texttt{ls(1)}
-  \item \texttt{cd}
-  \item \texttt{pwd(1)}
-  \item \texttt{mkdir(1)}
-  \item \texttt{rmdir(1)}
-  \item \texttt{cp(1)}
-  \item \texttt{mv(1)}
-  \item \texttt{rm(1)}
-  \item \texttt{find(1)}
-  \item \texttt{which(1)}
-  \item \texttt{touch(1)}
-  \item \texttt{stat(1)}
-\end{itemize}
-
-Och följande kommandon används för att arbeta med filernas innehåll:
-\begin{itemize}
-  \item \texttt{cat(1)}
-  \item \texttt{more(1)}
-  \item \texttt{less(1)}
-  \item \texttt{head(1)}
-  \item \texttt{tail(1)}
-  \item \texttt{grep(1)}
-  \item \texttt{vi(1)}
-  \item \texttt{nano(1)}
-\end{itemize}
-
-För fler kommandon, see avsnittet \emph{coreutils} i GNU:s infomanual genom att 
-köra kommandoraden \texttt{info coreutils}.
-
