Adds aims and reading instructions
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1209 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/computer/aims.tex
+++ b/labs/computer/aims.tex
@@ -1,1 +1,2 @@
-\item \dots
+\item Redogöra för datorsystems uppbyggnad och funktion.
+\item Beskriva hur information representeras och lagras digitalt.
