--- a/labs/computer/computer.tex
+++ b/labs/computer/computer.tex
@@ -8,7 +8,7 @@
 \usepackage{prettyref,varioref}
 \usepackage{listings}
 \usepackage[today,nofancy]{svninfo}
-\usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
+\usepackage[natbib,style=numeric-comp,maxbibnames=99]{biblatex}
 \addbibresource{literature.bib}
 \usepackage[varioref,prettyref,listings]{miunmisc}
 
