--- a/labs/computer/literature.tex
+++ b/labs/computer/literature.tex
@@ -1,1 +1,3 @@
-\dots
+Du ska först ha läst igenom kapitlen 0--4 i \cite{Brookshear2012csa}.
+Därefter ska du ha läst igenom kapitel 1, 2 och 
+4 i \citetitle{Oetiker2011lshort} \cite{Oetiker2011lshort}.
