Adds ``Not So Short Intro to LaTeX''
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1210 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/literature.bib
+++ b/literature.bib
@@ -139,6 +139,15 @@
 	year={2012},
 	URL={https://en.wikibooks.org/wiki/LaTeX/},
 }
+@misc{Oetiker2011lshort,
+  author={Oetiker, Tobias and
+    Partl, Hubert and
+    Hyna, Irene and
+    Schlegl, Elisabeth},
+  title={The Not So Short Introduction to {\LaTeX2e}: or \LaTeX2e in 157 
+    minutes},
+  URL={http://ctan.uib.no/info/lshort/english/lshort.pdf},
+}
 @misc{Honan2012haa,
 	author={Honan, Mat},
 	title={How {Apple} and {Amazon} Security Flaws Led to My Epic Hacking},
