--- a/literature.bib
+++ b/literature.bib
@@ -310,3 +310,27 @@
   note={Kungliga Tekniska högskolan},
   URL={http://www.csc.kth.se/utbildning/kth/kurser/DD1344/grudat10/pythonkramaren1.pdf},
 }
+@misc{PythonWeb,
+  title={About Python},
+  author={Python Software Foundation},
+  URL={http://python.org/about/},
+  note={Hämtad den 19 augusti 2013},
+}
+@inproceedings{grandell2006complicate,
+  title={Why complicate things?: introducing programming in high school using 
+    Python},
+  author={Grandell, Linda and Peltomäki, Mia and Back, Ralph-Johan and 
+    Salakoski, Tapio},
+  booktitle={Proceedings of the 8th Australasian Conference on Computing 
+    Education},
+  volume={52},
+  pages={71--80},
+  year={2006},
+  organization={Australian Computer Society, Inc.}
+}
+@misc{Shootout,
+  title={Computer Langugage Benchmark Game},
+  author={Fulgham, Brent},
+  URL={http://benchmarksgame.alioth.debian.org/},
+  note={Hämtad den 19 augusti 2013},
+}
