--- a/labs/python/aims.tex
+++ b/labs/python/aims.tex
@@ -1,1 +1,7 @@
-\item \dots
+\item Att använda grundläggande programmeringskonstruktioner:
+	\begin{itemize}
+		\item variabler,
+		\item flödeskontrollstrukturer, och
+		\item iterationer.
+	\end{itemize}
+\item Att skriva enklare program för att behandla radbaserad textdata.
