Minor changes, correct type of bibliography style
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1213 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/project.tex
+++ b/project/project.tex
@@ -4,12 +4,13 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english,swedish]{babel}
-\usepackage{url,hyperref}
+\usepackage[hyphens]{url}
+\usepackage{hyperref}
 \usepackage{prettyref,varioref}
 \usepackage{verbatim}
 \usepackage[binary]{SIunits}
 \usepackage[today,nofancy]{svninfo}
-\usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
+\usepackage[natbib,style=numeric-comp,maxbibnames=99]{biblatex}
 \addbibresource{literature.bib}
 \usepackage[varioref,prettyref]{miunmisc}
 
@@ -59,7 +60,7 @@ Syftet med uppgiften är:
 
 
 \section{Genomförande}
-\noindent
+
 Notera först att omfattningen för detta projekt är närmare tre veckor 
 heltidsarbete, eftersom att kursen läses på halvfart innebär detta strax över 
 fem veckors arbete om 20 timmar i veckan.
@@ -109,58 +110,6 @@ oberoende.
 
 När du känner dig säker på ditt mål och frågeställning, exempelvis efter 
 återkoppling, kan du sätta igång med din undersökning.
-
-\begin{comment}
-\subsubsection{Inspiration för projektidéer}
-\noindent
-The topic should be comparative analyses of (minimum two) different 
-technologies.  Here are four possible alternatives: 
-
-Compare two data communication standards. Explain their basic principles with 
-your own words, and draw your own conclusions about their advantages and 
-disadvantages, as well as which of them are expected to be improved in couple 
-of years. http://wikipedia.org , and the course book can be used as resources.  
-If there are RFCs for these standards (Request for Comments – which exist for 
-the standards at the network and higher layers), read them. RFC are normally 
-easy to read. The standards on physical layer or data‐link layer, for example 
-IEEE standards are often RFCs, but that would be more difficult to understand 
-than for example the transport protocols UDP and TCP or the e‐mail protocols 
-POP3 and IMAP4.  You can even compare two xDSL – modem standards (for example 
-ADSL2+ and VDSL2), or different wireless communication schemes (for example 
-IEEE802.11a versus b, different security schemes for wireless LAN, Bluetooth 
-versus IRDA, etc.). Here you will probably find the most difficult to read the 
-documents about the standard. Describe their advantages and disadvantages.  
-Draw your own conclusions about when the respective protocol is most convenient 
-to be used and what is expected to be largely used in the coming years. 
-
-Test and compare two types of software in the area of data communication.  
-Install and test two comparable software packages, for example two firewalls, 
-two instant message‐programs, two IP telephony programs, etc. You can use 
-a freeware, shareware or demo versions of commercial packages. One site that 
-offers downloads www.download.com. Once you decide what you are going to 
-compare, try to find out the protocols and other paradigms used in each of 
-them. Evaluate their usability, functionality and performance, for example in 
-a specific usage scenario or for specific user group. Criticize the marketing 
-motivations for the developers. Compile your thoughts about both programs 
-‐ advantages, disadvantages and performance‐ into a table or a bulleted list, 
-and draw conclusions about which of the programs is the best taking into 
-account all the properties, or according to your own beliefs will dominate the 
-market in the coming years.
-
-Compare two types of equipment. You can for example design a home network from 
-a given set of specifications or suggest changes in your company’s network.  
-Compare alternative solutions and recommend one of them. Test some of the 
-equipment and describe how it is configured and installed. Draw your own 
-conclusions about the advantages and disadvantages of the solution proposed 
-when compared to the others. Criticize the producer marketing motivation and 
-policy.
-
-Compare two data communications services, for example two Internet or broadband 
-suppliers or two wireless communication services. Describe the technical 
-differences, test them yourself and make a questionnaire to get opinion from 
-other users, or interview the suppliers about their future plans. Criticize the 
-suppliers about their marketing policy.
-\end{comment}
 
 \subsection{Teori}
 
@@ -294,7 +243,7 @@ kan besvaras ska ges.
 
 
 \section{Examination}
-\noindent
+
 Den färdiga rapporten tillsammans med källkod lämnas in i inlämningslådan 
 i lärplattformen.
 Omfattningen bör vara omkring (4) sidor tät text, utöver detta tillkommer 
